<resources>
    <string name="app_name">RUPizzaApp</string>
    <string name="specialty_pizzas">Specialty Pizzas</string>
    <string name="current_order">Current Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="build_your_own">Build Your Own</string>
    <string name="ru_pizza_app">RU Pizza App</string>
    <string name="initial_price">$0.00</string>
    <string name="build_your_own_pizza">Build your own pizza!</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="place_order">Place Order</string>
    <string name="delete_order">Delete Order</string>
    <string name="delete_instructions">If you want to delete an order, please click on it in the above list.</string>
    <string name="add_to_order">Add to Order</string>
    <string name="order_number">Order Number:</string>
    <string name="order_total">Order Total:</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string name="price">Price:</string>
    <string name="alfredo_sauce">Alfredo Sauce</string>
    <string name="tomato_sauce">Tomato Sauce</string>
    <string name="add_topping">Click to add a topping.</string>
    <string name="delete_topping">Click to delete a topping.</string>
    <string name="click_type">Click to select specialty pizza type.</string>
    <string name="quantity">Quantity:</string>
    <string name="byo_directions">You must choose at least 3 toppings. You must choose a sauce. You must choose a size.</string>
</resources>