<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/ru_pizza_app"
        android:textAlignment="center"
        android:textColor="#97221A"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <ImageView
        android:id="@+id/byomain"
        android:layout_width="148dp"
        android:layout_height="152dp"
        android:contentDescription="@string/build_your_own_pizza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364"
        app:srcCompat="@mipmap/buildyourownicon" />

    <ImageView
        android:id="@+id/coMain"
        android:layout_width="148dp"
        android:layout_height="152dp"
        android:contentDescription="@string/current_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.700"
        app:srcCompat="@mipmap/currentordericon"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="406dp" />

    <ImageView
        android:id="@+id/specialtyMain"
        android:layout_width="148dp"
        android:layout_height="152dp"
        android:contentDescription="@string/specialty_pizzas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.850"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364"
        app:srcCompat="@mipmap/specialtyicon"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="222dp" />

    <ImageView
        android:id="@+id/soMain"
        android:layout_width="148dp"
        android:layout_height="152dp"
        android:contentDescription="@string/store_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.850"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.700"
        app:srcCompat="@mipmap/storeordersicon"
        tools:layout_editor_absoluteX="232dp"
        tools:layout_editor_absoluteY="418dp" />

</androidx.constraintlayout.widget.ConstraintLayout>